# keep

./: .gitignore  README.md  contract.md  pyproject.toml  setup.py
assets/: Keep.icns
scripts/: Keep.entitlements  build_app.sh  check_version.py  sign_and_notarize.sh
src/keep/: agent.py  cli.py  conversation.py  menubar.py  router.py  voice.py
src/keep/search/: chunker.py  generator.py  index.py  ingest.py  retriever.py
src/keep/tools/: __init__.py  _dates.py  calendar.py  mail.py  reminders.py  screen.py  stuff.py
src/keep/vision/: backends.py  capture.py
tests/: conftest.py  test_agent.py  test_backends.py  test_capture.py  test_chunker.py  test_conversation.py  test_embeddings.py  test_generator.py  test_index.py  test_ingest.py  test_menubar.py  test_router.py  test_stuff.py  test_tools.py  test_voice.py
